force-app/main/default/objects/custom_create348__c/custom_create348__c.object-meta.xml
<CustomObject>
    <label>Custom created object348</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects348</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>