force-app/main/default/objects/custom_create348__c/fields/custom_create_348field545__c.field-meta.xml
<CustomField>
    <fullName>custom_create_348field545__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 348field545</label>
    <type>Checkbox</type>
</CustomField>