force-app/main/default/objects/custom_create348__c/fields/custom_create_348field606__c.field-meta.xml
<CustomField>
    <fullName>custom_create_348field606__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 348field606</label>
    <type>Checkbox</type>
</CustomField>